@@ -274,13 +274,13 @@ extern "C" {
   /**
    * <code>(assv KEY ALIST)</code>
    */
-  extern dfsch_object_t* dfsch_assoc(dfsch_object_t *key,
-				     dfsch_object_t *alist);
+  extern dfsch_object_t* dfsch_assv(dfsch_object_t *key,
+                                    dfsch_object_t *alist);
   /**
    * <code>(assq KEY ALIST)</code>
    */
-  extern dfsch_object_t* dfsch_assoc(dfsch_object_t *key,
-				     dfsch_object_t *alist);
+  extern dfsch_object_t* dfsch_assq(dfsch_object_t *key,
+                                    dfsch_object_t *alist);
 
 
   /**
